kubernetes/apps/media/qbittorrent/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbittorrent
  namespace: media
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: simple-icons:qbittorrent
spec:
  parentRefs:
    - name: internal
      namespace: networking
      sectionName: https
  hostnames:
    - "qb.${SECRET_DOMAIN}"
  rules:
    - backendRefs:
        - name: qbittorrent
          port: 8080
